--- a/appflow.config.json
+++ b/appflow.config.json
@@ -1,7 +1,7 @@
 {
     "apps": [
         {
-            "appId": "net.ducksmanager.whattheduck2",
+            "appId": "c6dce202",
             "dependencyInstallCommand": "git clone --recurse-submodules https://github.com/bperel/DucksManager . && npm i -g pnpm && pnpm i -r --prod -F '~whattheduck-ionic...'"
         }
     ]
